--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-theme-ui": "^0.13.1",
     "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-json": "^4.6.0",
     "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
