--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "gatsby-plugin-layout": "^3.13.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-theme-ui": "^0.13.1",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-json": "^4.6.0",
     "gatsby-transformer-sharp": "^4.6.0",
+    "gsap": "^3.10.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.3.0",
